@@ -2,6 +2,15 @@
 
         Reviewed by Adam Barth.
 
+        Teach HTMLTreeBuilder how to handle <button><button>
+        https://bugs.webkit.org/show_bug.cgi?id=41743
+
+        * html5lib/runner-expected-html5.txt:
+
+2010-07-06  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
         Teach TreeBuilder how to handle <form><form>
         https://bugs.webkit.org/show_bug.cgi?id=41741
 
